--- a/templates/about.html
+++ b/templates/about.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <link href="reset.css" rel="stylesheet" type="text/css" />
-    <link href="reset-webview.css" rel="stylesheet" type="text/css" />
-    <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="{{url_for('static',filename= 'css/reset.css')}}" rel="stylesheet" type="text/css" />
+    <link href="{{url_for('static',filename= 'css/reset-webview.css')}}" rel="stylesheet" type="text/css" />
+    <link href="{{url_for('static',filename= 'css/style.css')}}" rel="stylesheet" type="text/css" />
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&display=swap" rel="stylesheet">
@@ -15,10 +15,10 @@
   <body>
     <div class = "navbar">
       <ul>
-       <li> <a href = "/"<p id = "title"><b>The Programming Net</b></p></a></li>
+       <li> <a href = "/"><p id = "title"><b>The Programming Net</b></p></a></li>
         <li><a href="/signup">Log in/Sign up</a></li>
         <li><a href="/services">Services</a></li>
-        <li><a href="/About.html">About</a></li>
+        <li><a href="{{ url_for('about') }}">About</a></li>
          <li ><button id="theme-button" class = "button-17">Toggle Dark Mode</button></li>
 
       </ul>
@@ -30,7 +30,9 @@
       </p>
     
     <h2><b>Our Founder</b></h2>
-    <img src = "images/72499101385__54D7EFD7-748F-40D7-9CF0-A6B32DC28331.jpg" width =20% height = 15%></img>
+    <img src = "{{url_for('static', filename = 'images/myself.jpg')}}" width =20% height = 15%>
       <p>Yousif Jawad, born and raised in Brooklyn NY, is a passionate programmer who loves to learn, work, and experiment. Throughout his years in college, Yousif always wanted to make things easier for coders of any skill level to be able to work together on exciting projects  </NY> </p>
     </div>
+    </div>
+    <script src="{{url_for('static',filename= 'js/index.js')}}"></script>
   </body>
