--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
   <div class = "navbar">
     <ul>
       <li><a href="/"><p id="title"><b>The Programming Net</b></p></a></li>
-      <li><a href="/signup">Log in/Sign up</a></li>
+      <li><a href="/login">Log in/Sign up</a></li>
       <li><a href="/services">Services</a></li>
       <li><a href="{{ url_for('about') }}">About</a></li>
        <li ><button id="theme-button" class = "button-17">Toggle Dark Mode</button></li>
