--- a/static/css/about.css
+++ b/static/css/about.css
@@ -10,12 +10,16 @@ html, body {
     background-color: deepskyblue;
     color: white;
     font-family: 'Arial', sans-serif;
-    display: flex;
-  flex-direction: column;
-  align-items: center;
   width: 100%;
   max-width: 100%;
   overflow-x: hidden;
+  }
+
+  .main{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   
   /* Layout Components */
