--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 <title>About</title>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="{{url_for('static',filename= 'css/reset.css')}}" rel="stylesheet" type="text/css" />
     <link href="{{url_for('static',filename= 'css/reset-webview.css')}}" rel="stylesheet" type="text/css" />
     <link href="{{url_for('static',filename= 'css/about.css')}}" rel="stylesheet" type="text/css" />
@@ -14,6 +14,7 @@
 
   </head>
   <body>
+  <div class = "main">
     <div class = "navbar">
       <ul>
        <li> <a href = "/"><p id = "title"><b>The Programming Net</b></p></a></li>
@@ -49,6 +50,8 @@
     </div>
 </div>
     </section>
+  </div>
+
  <footer> 
 <div class = "footer-container">
   <div class = "socialIcons">
@@ -65,11 +68,11 @@
       <li><a href = "">Login/Signup</a></li>
     </ul>
   </div>
+
+
   </div>
-  <div class = "footerBottom">
-    
+  <div class = "footerBottom">  
       <p>Copyright &copy; 2025 The Programming Net. All rights reserved.</p>
-      <p>Contact us at: <a href="mailto:support@theprogrammingnet.com"></a></p>
 </div>
 </footer>
     <script src="{{url_for('static',filename= 'js/index.js')}}"></script>
