--- a/static/css/about.css
+++ b/static/css/about.css
@@ -7,6 +7,8 @@ html, body {
     width: 100%;
   }
   body {
+    display: flex;
+    flex-direction: column;
     background-color: deepskyblue;
     color: white;
     font-family: 'Arial', sans-serif;
@@ -33,24 +35,6 @@ html, body {
     text-align: center;
   }
   
-  .petition-container {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    width: auto;
-    padding-bottom: 50px;
-    margin-left: 5%;
-  }
-  
-  .petition-para {
-    width: 55%;
-    padding-right: 10px;
-  }
-  
-  .signatures {
-    width: 45%;
-    padding-right: 10px;
-  }
   
   .about {
     width: 50%;
@@ -59,6 +43,11 @@ html, body {
     margin-left: 5%;
   }
   
+  
+.about-head{
+    margin-bottom: 40px;
+}
+
   .team-member-container{
     display: flex;
     justify-content: space-evenly;
@@ -82,11 +71,18 @@ html, body {
     margin-top: 15px;
   }
   
+  p{
+    margin:10px 0px 10px 0px;
+  }
+  h3{
+    margin: 10px;
+  }
   .linkedin-logo{
     width: 30px;
     height: 30px;
     transition: transorm 0.3s ease;
     border-radius: 5px;
+    margin-bottom: 30px;
   }
   
   .linkedin-logo:hover {
@@ -146,74 +142,6 @@ html, body {
     color: red;
     text-decoration-color: green;
   }
-  
- 
-  .footer-container{
-    width: 100%;
-    padding: 70px 30px 20px;
-  }
-  footer{
-    padding:0;
-    margin: 0;
-    box-sizing: border-box;
-    background-color: black;
-  }
-  .socialIcons{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-  }
-
-  .socialIcons a{
-    text-decoration: none;
-    padding: 10x;
-    background-color: white;
-    margin: 10px;
-    border-radius: 50%;
-  }
-
-  .socialIcons a i{
-    font-size:2em;
-    color: black;
-    opacity: 0.9;
-  }
-
-  .socialIcons a:hover{
-    background-color: #111;
-    transition: 0.5s;
-  }
-
- .socialIcons a:hover i{
-        color: white;
-        transition: 0.5s;
-    }
-
-.footerNav ul{
-        display: flex;
-        justify-content: center;
-        list-style: none;
-    }
-
-.footerNav ul li a{
-    color: white;
-    text-decoration: none;
-    margin: 20px;
-    font-size: 1.3em;
-    opacity: 0.7;
-    transition: 0.5s;
-}
-
-.footerNav ul li a:hover{
-    opacity: 1;
-}
-
-.footerBottom{
-    background-color: #000;
-    padding: 20px;
-    text-align: center;
-}
-
   
   /* Button Styles */
   .button-17 {
@@ -319,13 +247,5 @@ html, body {
       padding-left: 0;
       flex-direction: column;
       align-items: center;
-    }
-    .footerNav ul{
-        flex-direction: column;
-    }
-    .footerNav ul li a{
-       width: 100%;
-       text-align: center;    
-       margin: 10px;
     }
   }
