--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,16 @@
 html, body {
   height: 100%;
   width: 100%;
+  margin: 0;
+  padding:0
 }
 
 body {
   background-color: deepskyblue;
   color: white;
   font-family: 'Arial', sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Layout Components */
@@ -18,6 +22,10 @@ body {
   margin: 5% auto 10%;
   padding-top: 10px;
   text-align: center;
+}
+
+.main{
+  flex: 1;
 }
 
 .petition-container {
@@ -246,7 +254,7 @@ a:hover {
 .modal {
   display: none;
   position: fixed;
-  z-index: 2;
+  z-index: 1000;
   left: 0;
   top: 0;
   width: 100%;
@@ -256,6 +264,8 @@ a:hover {
   align-items: center;
   justify-content: center;
 }
+
+
 
 .modal-content {
   background-color: lightsteelblue;
@@ -292,10 +302,11 @@ a:hover {
 }
 
 /* Responsive Design */
-@media (max-width: 768px) {
+@media (max-width: 700px) {
   .flex-container {
     padding-left: 0;
     flex-direction: column;
     align-items: center;
   }
+
 }
