--- a/templates/about.html
+++ b/templates/about.html
@@ -1,79 +1,34 @@
-<!DOCTYPE html>
-<html lang = "en">
-<title>About</title>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="{{url_for('static',filename= 'css/reset.css')}}" rel="stylesheet" type="text/css" />
-    <link href="{{url_for('static',filename= 'css/reset-webview.css')}}" rel="stylesheet" type="text/css" />
-    <link href="{{url_for('static',filename= 'css/about.css')}}" rel="stylesheet" type="text/css" />
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!-- templates/about.html -->
+{% extends "base.html" %}
 
-  </head>
-  <body>
-  <div class = "main">
-    <div class = "navbar">
-      <ul>
-       <li> <a href = "/"><p id = "title"><b>The Programming Net</b></p></a></li>
-        <li><a href="/login">Log in/Sign up</a></li>
-        <li><a href="/services">Services</a></li>
-        <li><a href="{{ url_for('about') }}">About</a></li>
-         <li ><button id="theme-button" class = "button-17">Toggle Dark Mode</button></li>
+{% block head %}
+  <link href="{{ url_for('static', filename='css/about.css') }}" rel="stylesheet">
+  <title>About Us</title>
+{% endblock %}
 
-      </ul>
-    </div>
-    <section class = "about">
-      <h2><b>About Us</b></h2>
-      <p class = "p" style = "width: 75%;">
-        Founded in 2024 in New York City, The Programming Net is a non-profit organization dedicated to connecting programmers from all over the world. Our mission is to create a platform where developers can share their knowledge, experiences, and ideas, and to connect with like-minded individuals.
-      </p>
-      <h2><b>Our Team:</b></h2>
-    <div class = "team-member-container">
-
-    <div class = "team-member">
-    <img class  = "Team-Member-img" src = "{{url_for('static', filename = 'images/myself.jpg')}}" width =20% height = 15%>
-    <h3>Yousif</h3>
-      <p>Lead Developer & Founder <br> </p>
-      <a href="https://www.linkedin.com/in/yousif-abdeljawad-9479b51a4/" target="_blank" class="socials"></a>
-        <img src="{{url_for('static', filename = 'images/linked_in.jpg')}}" alt="LinkedIn" class="linkedin-logo">
+{% block content %}
+<section class="about">
+  <h2 style = "margin-bottom: 10px;"><b>About Us</b></h2>
+  <p class="p" style="width: 75%; margin-bottom: 10px;" >
+    Founded in 2024 in New York City, The Programming Net is a non-profit...
+  </p>
+  <h2><b>Our Team:</b></h2>
+  <div class="team-member-container">
+    <div class="team-member">
+      <img class="Team-Member-img" src="{{ url_for('static', filename='images/myself.jpg') }}" width="20%" height="15%">
+      <h3>Yousif</h3>
+      <p>Lead Developer & Founder</p>
+      <a href="https://www.linkedin.com/in/yousif-abdeljawad-9479b51a4/" target="_blank"></a>
+      <img src="{{ url_for('static', filename='images/linked_in.jpg') }}" alt="LinkedIn" class="linkedin-logo">
     </div>
 
-    <div class = "team-member">
-    <img class  = "Team-Member-img" src = "{{url_for('static', filename = 'images/shawn.jpg')}}" width =20% height = 15%>
-    <h3>Shawn</h3>
-      <p>Picked up off the street<br></p>
-      <a href="https://www.linkedin.com/in/shawn-nosikovsky/" target="_blank" class="socials"></a>
-        <img src="{{url_for('static', filename = 'images/linked_in.jpg')}}" alt="LinkedIn" class="linkedin-logo">
+    <div class="team-member">
+      <img class="Team-Member-img" src="{{ url_for('static', filename='images/shawn.jpg') }}" width="20%" height="15%">
+      <h3>Shawn</h3>
+      <p>Picked up off the street</p>
+      <a href="https://www.linkedin.com/in/shawn-nosikovsky/" target="_blank"></a>
+      <img src="{{ url_for('static', filename='images/linked_in.jpg') }}" alt="LinkedIn" class="linkedin-logo">
     </div>
-</div>
-    </section>
   </div>
-
- <footer> 
-<div class = "footer-container">
-  <div class = "socialIcons">
-    <a href = ""><i class = "fa-brands fa-facebook"></i></a>
-    <a href = ""><i class = "fa-brands fa-instagram"></i></a>
-    <a href = ""><i class = "fa-brands fa-x"></i></a>
-    <a href = ""><i class = "fa-brands fa-youtube"></i></a>
-  </div>
-  <div class = "footerNav">
-    <ul>
-      <li><a href = "">Home</a></li>
-      <li><a href = "">About</a></li>
-      <li><a href = "">Contact Us</a></li>
-      <li><a href = "">Login/Signup</a></li>
-    </ul>
-  </div>
-
-
-  </div>
-  <div class = "footerBottom">  
-      <p>Copyright &copy; 2025 The Programming Net. All rights reserved.</p>
-</div>
-</footer>
-    <script src="{{url_for('static',filename= 'js/index.js')}}"></script>
-  </body>
+</section>
+{% endblock %}
