--- a/templates/login.html
+++ b/templates/login.html
@@ -1,37 +1,30 @@
-<!DOCTYPE html>
-<html lang = "en">
+{% extends 'base.html' %}
+{% block head %}
+<link href="{{ url_for('static', filename='css/login-style.css') }}" rel="stylesheet">
 <title>Login</title>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <link href="{{url_for('static',filename= 'css/reset.css')}}" rel="stylesheet" type="text/css" />
-  <link href="{{url_for('static',filename= 'css/reset-webview.css')}}" rel="stylesheet" type="text/css" />
-  <link href="{{url_for('static',filename= 'css/login-style.css')}}" rel="stylesheet" type="text/css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&display=swap" rel="stylesheet">
+{% endblock %}
 
-</head>
-<body>
-  <div class = "navbar">
-    <ul>
-     <li> <a href = "/"><p id = "title"><b>The Programming Net</b></p></a></li>
-      <li><a href="/signup">Log in/Sign up</a></li>
-      <li><a href="/services">Services</a></li>
-      <li><a href="{{ url_for('about') }}">About</a></li>
-       <li ><button id="theme-button" class = "button-17">Toggle Dark Mode</button></li>
-
-    </ul>
+{% block content %}
+<div class="flex-container">
+  <h2 style = "margin-bottom: 20px;">Welcome back to The Programming Net!</h2>
+  <form method="POST" action="/login">
+    {{ form.hidden_tag() }}
+    <div class="form-group">
+      <p>Email:</p>
+      {{ form.email(class="form-input") }}
+    </div>
+    <div class="form-group">
+      <p>Password:</p>
+      {{ form.password(class="form-input") }}
+    </div>
+    {{ form.submit(class="button-17") }}
+  </form>
+  <div class="signup-link">
+    <a href="/register">Don't have an account? Sign up!</a>
   </div>
-<div class = "form-container">
-  <form id = "loginform" method="POST">
-    <label for="username">Username</label>
-    <input type="text" name="username" id="username"><br>
-    <p id="username-text"></p>
-    <label for="password">Password</label>
-    <input type="text" name="password" id="password"><br>
-    <input type="submit" name="submit" class = "button-17">
-</form>
 </div>
-<script src="{{url_for('static',filename= 'js/index.js')}}"></script>
-</body>
+{% endblock %}
+
+{% block scripts %}
+<script src="{{ url_for('static', filename='js/login.js') }}"></script>
+{% endblock %}
