--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,10 +5,12 @@
 {% endblock %}
 
 {% block content %}
+<div class = flex-container>
 <h1>Dashboard</h1>
 
 <p>Welcome {{name}}!</p>
-
+<a href = "{{ url_for('logout') }}">Logout</a>
+</div>
 {% endblock %}
 {% block scripts %}
 <script src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
