--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,6 +4,7 @@
       <li><a href="/register">Create Account</a></li>
       <li><a href="/login">Log in</a></li>
       <li><a href="{{ url_for('about') }}">About</a></li>
+      <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
       <li><button id="theme-button" class="button-17">Toggle Dark Mode</button></li>
     </ul>
   </div>
