New implementation of feedback form and roadmap page. Feedback form creates database model and populates with customer feedback. Roadmap page work in progress.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -139,6 +139,10 @@ body {
 }
 
 /* Navigation */
+.navbar{
+  margin-bottom: 50 px;
+  padding-bottom: 50px;
+}
 .navbar ul {
   margin-top: 0;
   list-style-type: none;
